--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/app.ts"
+    "start": "ts-node ./src/app.ts",
+    "dev": "nodemon ./src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "nodemon": "^2.0.15",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "ts-node": "^10.4.0"
+    "mysql": "^2.18.1",
+    "reflect-metadata": "^0.1.13",
+    "ts-node": "^10.4.0",
+    "typeorm": "^0.2.41"
   }
 }
