--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "body-parser": "^1.19.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "json-typescript-mapper": "^1.1.3",
     "mysql": "^2.18.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
